syntax = "proto3";

option csharp_namespace = "FSRAas.GRPC.Lib.V3.Services";

package FSRAas.GRPC.Lib.V3;

import "Protos/AasModels.V3.proto";

/* AAS API Models V3 */

enum OutputLevel {
    OUTPUT_LEVEL_DEEP = 0;
    OUTPUT_LEVEL_CORE = 1;
}

enum OutputContent {
    OUTPUT_CONTENT_NORMAL = 0;
    OUTPUT_CONTENT_VALUE = 1;
    OUTPUT_CONTENT_REFERENCE = 2;
    OUTPUT_CONTENT_PATH = 3;
}

enum OutputExtent {
    OUTPUT_EXTENT_WITHOUT_BLOB_VALUE = 0;
    OUTPUT_EXTENT_WITH_BLOB_VALUE = 1;
}

message PagedResultPagingMetadata {
    string cursor = 1;
}

message OutputModifier {
    string cursor = 1;
    int32 limit = 2;
    OutputLevel level = 3;
    OutputContent content = 4;
    OutputExtent extent = 5;
}

enum ExecutionState {
    EXECUTION_STATE_INITIATED = 0;
    EXECUTION_STATE_RUNNING = 1;
    EXECUTION_STATE_COMPLETED = 2;
    EXECUTION_STATE_CANCELED = 3;
    EXECUTION_STATE_FAILED = 4;
    EXECUTION_STATE_TIMEOUT = 5;
}

message OperationResult {
    string requestId = 1;
    repeated OperationVariableDTO outputArguments = 2;
    repeated OperationVariableDTO inoutputArguments = 3;
    bool success = 4;
    string message = 5;
    ExecutionState executionState = 6;
}